salesforce-metadata/force-app/main/default/objects/Flow_Test_Case_Result__c/Flow_Test_Case_Result__c.object-meta.xml
<CustomObject>
    <label>Flow Test Case Result</label>
    <pluralLabel>Flow Test Case Results</pluralLabel>
    <nameField>
        <displayFormat>TC-{0000}</displayFormat>
        <label>Flow Test Case Result Name</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>