salesforce-metadata/force-app/main/default/objects/Flow_Test_Case_Result__c/fields/Executed_At__c.field-meta.xml
<CustomField>
    <fullName>Executed_At__c</fullName>
    <label>Executed At</label>
    <type>DateTime</type>
</CustomField>