salesforce-metadata/force-app/main/default/objects/Flow_Test_Case_Result__c/fields/Failure_Reason__c.field-meta.xml
<CustomField>
    <fullName>Failure_Reason__c</fullName>
    <label>Failure Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>