salesforce-metadata/force-app/main/default/objects/Flow_Test_Case_Result__c/fields/Flow_Test_Run__c.field-meta.xml
<CustomField>
    <fullName>Flow_Test_Run__c</fullName>
    <label>Flow Test Run</label>
    <referenceTo>Flow_Test_Run__c</referenceTo>
    <relationshipLabel>Test Case Results</relationshipLabel>
    <relationshipName>Test_Case_Results</relationshipName>
    <type>MasterDetail</type>
</CustomField>