salesforce-metadata/force-app/main/default/objects/Flow_Test_Case_Result__c/fields/Screen_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Screen_API_Name__c</fullName>
    <label>Screen API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>