salesforce-metadata/force-app/main/default/objects/Flow_Test_Case_Result__c/fields/Test_Case_Description__c.field-meta.xml
<CustomField>
    <fullName>Test_Case_Description__c</fullName>
    <label>Test Case Description</label>
    <type>TextArea</type>
</CustomField>